fixed scrollbars

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,6 +38,9 @@ html, body {
 #root {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 button:hover { 
